--- a/app/index.html
+++ b/app/index.html
@@ -7,7 +7,7 @@
   <link rel="shortcut icon" href="favicon.png" />
   <link href="css/all.css" rel="stylesheet"/>
 </head>
-<body>
+<body ng-controller="MainLanguage">
   <div class="loader" loader>
     <div class="loader_inner"></div>
   </div>
